# On-the-Move-Mobile-Manipulation

./: README.md
planning/: CMakeLists.txt  package.xml
planning/action/: Servoing.action
planning/launch/: map.launch.py
planning/map/: map_server_params.yaml
planning/map/map1/: map.yaml
planning/map/map3/: map.yaml
planning/src/: ArmController.cpp  GripperController.cpp  HybridAStar.cpp  Main.cpp  OBB.cpp  Optimizer.cpp  PositionServoing.cpp  RegulatedPurePursuit.cpp  Ur5e.cpp
planning/srv/: PickPoint.srv
planning/utils/: cost_plot.py  execution_time_plot.py
ros2_grasping/: attacher_action.py
ros2_grasping/scripts/: attacher_action.py
ros2_grasping/urdf/: box.urdf
skywalker/: CMakeLists.txt  package.xml
skywalker/config/: robot_controllers.yaml
skywalker/config/ur5e/: visual_parameters.yaml
skywalker/launch/: robot.launch.py
skywalker/urdf/: mobile_manipulator.sdf  mobile_manipulator.urdf  mobile_manipulator.urdf.xacro  skywalker.urdf.xacro  skywalker_model.xacro  temp.urdf.xacro  ur5e.urdf
skywalker/urdf/mir_100/: mir.gazebo.xacro  mir.transmission.xacro  mir_100_v1.urdf.xacro  mir_v1.urdf.xacro  sick_s300.urdf.xacro
skywalker/urdf/mobile_base/: basic_mobile_bot_v1.urdf  basic_mobile_bot_v2.urdf
skywalker/urdf/ur5e/: ur5e_macro.xacro  ur_macro.xacro  ur_transmissions.xacro
skywalker/worlds/: new_world.world  new_world2.world  office_small.world
